--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,8 @@
 
 title: The Heet in 3D
 email: aheet@nd.edu
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/aheet_vr/about" # the subpath of your site, e.g. /blog
+description: _illegitimi non carborundum_
+baseurl: "/aheet_vr" # the subpath of your site, e.g. /blog
 url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  lePetitProf
